--- a/TestExcel/Views/ExportExcel/Index.cshtml
+++ b/TestExcel/Views/ExportExcel/Index.cshtml
@@ -5,4 +5,4 @@
 
 <h2>Index</h2>
 <span>Excel File </span><input type="file" name="excelfile" />
-<a href="@Url.Action("Export","ExportExcel")">Export Excel</a>
+<a class="w3-btn w3-green" href="@Url.Action("Export","ExportExcel")">Export Excel</a>
